--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,16 +18,16 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                      <a href="#about" class="page-scroll">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                      <a href="#portfolio" class="page-scroll">Work</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#hire">Hire</a>
+                      <a href="#hire" class="page-scroll">Hire</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                      <a href="#contact" class="page-scroll">Contact</a>
                     </li>
                 </ul>
             </div>
