--- a/css/main.scss
+++ b/css/main.scss
@@ -155,8 +155,8 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: white;
-    background: linear-gradient(to right, #296a44 0%, #4e8ed0 100%);
-    background-image:  linear-gradient(to right, #296a44 0%, #4e8ed0 100%);
+    background: linear-gradient(to right, #227DC4 -25%, #0e4369 125%);
+    background-image:  linear-gradient(to right, #227DC4 -25%, #0e4369 125%);
     background-position-x: initial;
     background-position-y: initial;
     background-size: initial;
