--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
                         <ul class="list-inline banner-social-buttons">
                             {% for network in site.social %}
                             <li>
-                                <a href="{{ network.url }}" data-toggle="tooltip" title="{{ network.name }}" class="btn btn-default btn-lg"><i class="fa fa-{{ network.title }} fa-fw"></i> <span class="network-name hidden-sm hidden-md hidden-lg">{{ network.title }}</span></a>
+                                <a href="{{ network.url }}" data-toggle="tooltip" title="{{ network.name }}" class="btn btn-default btn-lg"><i class="fa fa-{{ network.title }} fa-fw"></i> <span class="network-name hidden-sm hidden-md hidden-lg">{{ network.name }}</span></a>
                             </li>
                             {% endfor %}
                         </ul>
