--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,8 @@
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
+    <meta name="wot-verification" content="9b027f805c1729cc321b"/>
+
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <link rel="stylesheet" href="{{ "/style.css" | prepend: site.baseurl }}">
